--- a/src/css/app.css
+++ b/src/css/app.css
@@ -8,7 +8,7 @@ body{
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('/images/OurKadaiLogo.jpg');
+  background-image: url(../images/OurKadaiLogo.jpg);
   min-height: 100%;
   background-position: center;
   background-size: cover;
