--- a/src/css/app.css
+++ b/src/css/app.css
@@ -24,5 +24,5 @@ body, html {height: 100%}
 
 .content-large{font-size:18px!important}
 
-.display-middle{position:absolute;top:10%;left:10%;}
+.display-middle{position:absolute;top:10%;}
 
