--- a/src/layouts/_head.html
+++ b/src/layouts/_head.html
@@ -2,6 +2,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css">
-    <title>OurKadai - By Techatpark</title>
+    <title>OurKadai - A Trusted Technology Partner</title>
