--- a/src/css/app.css
+++ b/src/css/app.css
@@ -51,17 +51,19 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 main{
-  background: url(../images/Web_Img.jpg);
+	background: url(../images/Mobile_Img.jpg);
+  
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
   min-height: 100vh;
 }
+
 main div.info-board {
-  padding-left: 12em;
-  padding-top: 16em;
-}
+    padding-left: 2em;
+    padding-top: 18em;
+  }
 
 h1 {
   font-size: 2.5rem;
@@ -69,4 +71,39 @@ h1 {
 h2 {
   font-size: 1.5rem;
 }
+/* ----------- Non-Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 800px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+	  main {
+		background: url(../images/Web_Img.jpg);
+		background-position: center;
+		background-repeat: no-repeat;
+		background-attachment: scroll;
+		background-size: cover;
+		min-height: 100vh;
+	  }
+	main div.info-board {
+		padding-left: 12em;
+		padding-top: 16em;
+	  }
+}
 
+/* ----------- Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 800px)  
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+	main {
+		background: url(../images/Web_Img.jpg);
+		background-position: center;
+		background-repeat: no-repeat;
+		background-attachment: scroll;
+		background-size: cover;
+		min-height: 100vh;
+	  }
+	main div.info-board {
+		padding-left: 12em;
+		padding-top: 16em;
+	  }
+}
