--- a/src/layouts/_head.html
+++ b/src/layouts/_head.html
@@ -5,4 +5,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css">
+    <link rel="shortcut icon" type="image/jpg" href="/images/favicon.ico"/>
     <title>OurKadai - A Trusted Technology Partner</title>
+
