--- a/src/layouts/_head.html
+++ b/src/layouts/_head.html
@@ -8,3 +8,7 @@
     <link rel="shortcut icon" type="image/jpg" href="/images/favicon.ico"/>
     <title>OurKadai - A Trusted Technology Partner</title>
 
+    <meta property="og:title" content="OurKadai - A Trusted Technology Partner" />
+    <meta property="og:description" content="Building Software to enable Business" />
+    <meta property="og:url" content="https://www.ourkadai.com" />
+    <meta property="og:image" content="/images/Mobile_logo.svg" />
