--- a/src/layouts/_head.html
+++ b/src/layouts/_head.html
@@ -12,3 +12,6 @@
     <meta property="og:description" content="Building Software to enable Business" />
     <meta property="og:url" content="https://www.ourkadai.com" />
     <meta property="og:image" content="/images/Mobile_logo.svg" />
+
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
