--- a/src/layouts/_header.html
+++ b/src/layouts/_header.html
@@ -1,6 +1,7 @@
 <header class="mb-auto">
     <div>
-      <a class="h3 float-md-start mb-0" href="/"><img width="150px" height="100px"src="/images/OurKadia-Logo_current.jpg"/></a>
+      <a class="h3 float-md-start mb-0" href="/">
+        <img width="150px" height="100px"src="/images/logo.png"/></a>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link" href="/services">Services</a>
         <a class="nav-link" href="/methodology">Methodology</a>
