--- a/src/layouts/_header.html
+++ b/src/layouts/_header.html
@@ -3,12 +3,12 @@
       <a class="h3 float-md-start mb-0" href="/">
         <img width="150px" height="100px"src="/images/logo.png"/></a>
       <nav class="nav nav-masthead justify-content-center float-md-end">
+        <a class="nav-link" href="/about">About Us</a>
         <a class="nav-link" href="/services">Services</a>
         <a class="nav-link" href="/methodology">Methodology</a>
         <a class="nav-link" href="/work">Clients</a>
-        <a class="nav-link" href="/about">About Us</a>
+        <a class="nav-link" href="/publications">Presentations</a>
         <a class="nav-link" href="/contact">Contact</a>
-        <a class="nav-link" href="/publications">Publications</a>
 
       </nav>
     </div>
