--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,10 +2,16 @@
 
 <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center"><img class="img-fluid w-25"
     src="/images/logo.png">
-  <h5 class="w-50 text-center">A Software Company that can empower<br>your <span class="lead">Digital
-      transformation</span> journey<br>through <span class="type lead"><span><span>Microservices</span>
+  <h5 class="w-50 text-center">
+    Software Company that empowers your <span class="lead">Digital
+      transformation</span> journey <br> through 
+      
+      <span class="type lead"><span><span>Microservices</span>
         <span>Devops</span> <span>Cloud Native Apps</span> <span>JAM Stack</span> <span>Low Code/No
-          Code</span></span></span></h5><a href="/services" class="btn btn-lg btn-secondary fw-bold">Get Started</a>
+          Code</span></span></span></h5>
+          
+          
+          <a href="/services" class="btn btn-lg btn-secondary fw-bold">Our Services</a>
 </div>
 
 {{ end }}
