--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,8 +1,8 @@
 
 // Google Fonts
-@import url(https://fonts.googleapis.com/css?family=Poppins:400,500,600);
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;1,200&display=swap');
 
 // Typography Variables
-$font-family-sans-serif: Poppins Text,Helvetica Neue,Apple Color Emoji,sans-serif;
+$font-family-sans-serif: 'Mulish',Helvetica Neue,Apple Color Emoji,sans-serif;
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace !default;
 $font-family-base: $font-family-sans-serif !default;
