--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -20,8 +20,8 @@
   {{ block "header" . }}{{ partial "header" . }}{{end}}
   {{ end }}
 
-  <main class="container-fluid px-5 w-100 h-100">
-    <div class="row w-100 px-5 h-100" id="main-container">
+  <main class="container-fluid w-100 h-100">
+    <div class="row w-100 h-100" id="main-container">
       {{ block "main" . }}{{end}}
     </div>
     
