--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -21,7 +21,7 @@
           <a class="nav-link {{ if eq .URL "/publications/" }}active{{ end }}" href="/publications">Presentations</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ if eq .URL "/about/" }}active{{ end }}" href="/about">About Us</a>
+          <a class="nav-link {{ if eq .URL "/about/" }}active{{ end }}" href="/about">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link {{ if eq .URL "/contact/" }}active{{ end }}" href="/contact">Contact</a>
