--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,9 +7,18 @@
 
 @import './vendors/bootstrap';
 
-.nav-link.active {
-  font-weight: bolder;
+
+@media (min-width: 768px) { 
+  .nav-link.active {
+  font-weight:bolder;
+  font-size: 1.1em;
+  line-height: 1.2em;
+  text-decoration: underline;
 }
+
+
+}
+
 
 .type {
     display:inline-block;
