--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -18,7 +18,7 @@
           <a class="nav-link {{ if eq .URL "/work/" }}active{{ end }}" href="/work">Clients</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ if eq .URL "/publications/" }}active{{ end }}" href="/publications">Presentations</a>
+          <a class="nav-link {{ if eq .URL "/publications/" }}active{{ end }}" href="/publications">Publications</a>
         </li>
         <li class="nav-item">
           <a class="nav-link {{ if eq .URL "/about/" }}active{{ end }}" href="/about">About</a>
