--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,17 +1,20 @@
 {{ define "main" }}
 
-<div class="d-flex flex-column min-vh-100 justify-content-center align-items-center"><img class="img-fluid w-25"
-    src="/images/logo.png">
-  <h5 class="w-50 text-center">
-    Software Company that empowers your <span class="lead">Digital
-      transformation</span> journey <br> through 
-      
-      <span class="type lead"><span><span>Microservices</span>
-        <span>Devops</span> <span>Cloud Native Apps</span> <span>JAM Stack</span> <span>Low Code/No
-          Code</span></span></span></h5>
-          
-          
-          <a href="/services" class="btn btn-lg btn-secondary fw-bold">Our Services</a>
+<div class="container-fluid">
+  <div class="row justify-content-center align-items-center">
+    <div class="col-lg-6 col-md-8 col-sm-10 col-12 text-center">
+      <img class="img-fluid" src="/images/logo.png">
+      <h2 class="text-center">
+        Software Company that empowers your <span class="display-5">Digital transformation</span> journey <br> through 
+        <span class="type display-6"><span><span>Microservices</span><span>Devops</span><span>Cloud Native Apps</span><span>JAM Stack</span><span>Low Code/No Code</span></span></span>
+      </h2>
+      <div class="btn-group" role="group">
+        <a href="/services" class="btn btn-lg btn-secondary fw-bold me-2">Our Services</a>
+        <a href="/contact" class="btn btn-lg btn-primary fw-bold ms-2">Contact Us</a>
+      </div>
+    </div>
+  </div>
 </div>
+
 
 {{ end }}
