--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -12,6 +12,9 @@
           <a class="nav-link {{ if eq .URL "/services/" }}active{{ end }}" aria-current="page" href="/services">Services</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link {{ if eq .URL "/training/" }}active{{ end }}" aria-current="page" href="/training">Training</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link {{ if eq .URL "/methodology/" }}active{{ end }}" href="/methodology">Methodology</a>
         </li>
         <li class="nav-item">
