--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -6,7 +6,7 @@
     <base href="{{ if getenv " CONTEXT" }}{{ cond (eq "production" (getenv
     "CONTEXT" )) (getenv "URL" ) (getenv "DEPLOY_PRIME_URL" ) }}{{ else }}{{
     $.Site.BaseURL }}{{ end }}">
-    <title>{{ $.Site.Title }}</title>
+    <title>{{ $.Title }} | {{ $.Site.Title }}</title>
 
     <!--Fav Icon-->
     <link
