--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -20,7 +20,7 @@
   {{ block "header" . }}{{ partial "header" . }}{{end}}
   {{ end }}
 
-  <main class="container-fluid w-100 h-100">
+  <main class="container w-100 h-100">
     <div class="row w-100 h-100" id="main-container">
       {{ block "main" . }}{{end}}
     </div>
