--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -3,18 +3,29 @@
 <div class="container-fluid">
   <div class="row justify-content-center align-items-center">
     <div class="col-lg-8 col-md-8 col-sm-10 col-12 text-center">
-      <img class="img-fluid" src="/images/logo.png">
+      <img class="img-fluid" src="/images/logo.png" />
       <h2 class="text-center">
-        Software Training and Consulting Company that empowers your <span class="display-5">Digital transformation</span> journey <br> through 
-        <span class="type display-6"><span><span>Microservices</span><span>Devops</span><span>Cloud Native Apps</span><span>JAM Stack</span><span>Low Code/No Code</span></span></span>
+        Software Training and Consulting Company that empowers your
+        <span class="display-5">Digital transformation</span> journey <br />
+        through
+        <span class="type display-6"
+          ><span
+            ><span>Microservices</span><span>Devops</span
+            ><span>Cloud Native Apps</span><span>JAM Stack</span
+            ><span>Low Code/No Code</span></span
+          ></span
+        >
       </h2>
-      <div class="btn-group" role="group">
-        <a href="/services" class="btn btn-lg btn-secondary fw-bold me-2">Services</a>
-        <a href="/training" class="btn btn-lg btn-primary fw-bold ms-2">Training</a>
+      <div class="btn-group mt-3" role="group">
+        <a href="/services" class="btn btn-lg btn-secondary fw-bold me-2"
+          >Services</a
+        >
+        <a href="/training" class="btn btn-lg btn-primary fw-bold ms-2"
+          >Training</a
+        >
       </div>
     </div>
   </div>
 </div>
-
 
 {{ end }}
